ISPN-5735 Remove references to PermGen setting in JVM configurations of tests, enlarge some heap sizes